# azure-cloud-ai-visualizer

./: API_REFERENCE.md  CONTRIBUTING.md  Dockerfile.frontend  README.md  apply_trace_migration.sql  docker-compose.yml  nginx.conf
backend/: .env.example  LOCAL_MODELS.md  pyproject.toml  test_local_models.py  test_single_agent_stream.py
backend/app/: deps.py
backend/app/agents/: auto_remediation.py  autopilot_engine.py  azure_architect_agent.py  compliance_engine.py  diagram_guide_prompts.py  doc_generator.py  dual_pass_validation.py  landing_zone_team.py  migration_agent.py
backend/app/agents/clients/: local_model_client.py
backend/app/agents/tools/: analyze_image_for_architecture.py  generate_iac.py
backend/app/api/: routes.py
backend/app/api/endpoints/: autopilot.py  chat.py  chat_simple.py  compliance.py  cost.py  diagram_analysis.py  docs.py  fix.py  iac.py  iac_mcp.py  iac_openai_simple.py  migration.py  projects.py  projects_simple.py  reverse_engineering.py  runs.py  validation.py
backend/app/cloud_parsers/: __init__.py  parsers.py
backend/app/core/: azure_client.py  config.py
backend/app/iac_generators/: aws_migration.py  gcp_migration.py  terraform.py
backend/app/models/: __init__.py  infra_models.py
backend/app/obs/: tracing.py
backend/app/utils/: integration_settings.py
backend/app/websockets/: handlers.py  routes_simple.py
frontend/: FRONTEND_GUIDE.md
frontend/samples/: aws_inventory_sample.json
frontend/scripts/: buildAwsIconIndex.js  buildGcpIconIndex.js  buildGcpServices.js  stripAwsIconIndex64.js
frontend/src/: App.css  index.css
frontend/src/components/: RunProgress.tsx
frontend/src/data/: awsIconIndex.json  awsServices.ts  azureIconIndex.json  azureServices.ts  gcpIconIndex.json  gcpServices.json  gcpServices.ts
frontend/src/hooks/: useChat.tsx  useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  handleChooser.ts
frontend/src/pages/: Index.tsx  Workspace.tsx
frontend/src/services/: architectureParser.ts  (+4 more)
(+29 files in other folders)
